--- a/Gateway/application/configs/application.ini
+++ b/Gateway/application/configs/application.ini
@@ -14,6 +14,8 @@ autoloaderNamespaces[] = "Api_"
 autoloaderNamespaces[] = "Account_"
 resources.frontController.defaultModule = "api"
 
+
+leo_masta = 'test'
 resources.frontController.params.displayExceptions = 1
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.prefixDefaultModule = true
@@ -26,7 +28,6 @@ resources.multidb.guestbook.username = "root"
 resources.multidb.guestbook.password = "root"
 resources.multidb.guestbook.dbname = "db_memo"
 resources.multidb.guestbook.charset = "utf8"
-
 
 
 resources.modules[] = "account"
