update user Resource

--- a/Gateway/application/configs/application.ini
+++ b/Gateway/application/configs/application.ini
@@ -12,6 +12,7 @@ autoloaderNamespaces[] = "REST_"
 autoloaderNamespaces[] = "Application_"
 autoloaderNamespaces[] = "Api_"
 autoloaderNamespaces[] = "Account_"
+autoloaderNamespaces[] = "Plugins_"
 resources.frontController.defaultModule = "api"
 
 
