--- a/Gateway/public/.htaccess
+++ b/Gateway/public/.htaccess
@@ -1,5 +1,7 @@
 
 RewriteEngine On
+RewriteBase /memo-gateway
+
 SetEnv APPLICATION_ENV "production"
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
